--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ text-decoration: none;
 
 .script-source {
   font-weight: bold !important;
-  border-left: 3px solid #87c941 !important;
+  border-left: 3px solid #d65454 !important;
 }
 
 
